[package]
name = "blockchain-tutorial"
version = "0.0.1"
authors = ["Liu Chong <mail@liuchong.io>"]
edition = "2018"

[package.metadata.x]
lint = "cargo clippy --verbose --all-targets --all-features -- -D warnings"
test = "cargo test --verbose --all --release"
build = "cargo build --verbose --all --release"

[dependencies]
chrono = "0.4"
dotenv = "0.13"
futures = "0.1"
hex = "0.3"
hyper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"